# serializer version: 1
# name: test_switch[switch.test_mower_1_enable_danger_zone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_mower_1_enable_danger_zone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enable Danger Zone',
    'platform': 'husqvarna_automower',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stay_out_zones',
    'unique_id': 'c7233734-b219-4287-a173-08e3643f89f0_AAAAAAAA-BBBB-CCCC-DDDD-123456789101_stay_out_zones',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.test_mower_1_enable_danger_zone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Mower 1 Enable Danger Zone',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_mower_1_enable_danger_zone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch[switch.test_mower_1_enable_schedule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_mower_1_enable_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enable schedule',
    'platform': 'husqvarna_automower',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'enable_schedule',
    'unique_id': 'c7233734-b219-4287-a173-08e3643f89f0_enable_schedule',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.test_mower_1_enable_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Mower 1 Enable schedule',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_mower_1_enable_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.test_mower_1_enable_springflowers-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_mower_1_enable_springflowers',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Enable Springflowers',
    'platform': 'husqvarna_automower',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stay_out_zones',
    'unique_id': 'c7233734-b219-4287-a173-08e3643f89f0_81C6EEA2-D139-4FEA-B134-F22A6B3EA403_stay_out_zones',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.test_mower_1_enable_springflowers-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Mower 1 Enable Springflowers',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_mower_1_enable_springflowers',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
